--- a/content/零件.html
+++ b/content/零件.html
@@ -144,9 +144,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">作業 << <a href='作業.html'>Previous</a> <a href='組合圖.html'>Next</a> >> 組合圖<br /><h1>零件</h1>
 <p><strong><img alt="" height="544" src="./../images/零件1.jpg" width="800"/></strong></p>
-<strong><img alt="" height="389" src="./../images/零件2.jpg" width="560"/></strong>
-<strong><img alt="" height="521" src="./../images/零件3.jpg" width="515"/></strong>
-<strong><img alt="" height="548" src="./../images/零件4.jpg" width="664"/></strong>
+<strong><img alt="" height="389" src="./../images/零件2.jpg" width="560"/></strong> <strong><img alt="" height="521" src="./../images/零件3.jpg" width="515"/></strong> <strong><img alt="" height="548" src="./../images/零件4.jpg" width="664"/></strong>
 <br />作業 << <a href='作業.html'>Previous</a> <a href='組合圖.html'>Next</a> >> 組合圖</div>
         
     <!-- footer -->
