--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -290,11 +290,14 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <div></div>
 <h1><strong>作業</strong></h1>
 <h2><strong>零件</strong></h2>
-<p><strong></strong></p>
+<p><strong><img alt="" height="544" src="/images/零件1.jpg" width="800"/></strong></p>
+<strong><img alt="" height="389" src="/images/零件2.jpg" width="560"/></strong>
+<strong><img alt="" height="521" src="/images/零件3.jpg" width="515"/></strong>
+<strong><img alt="" height="548" src="/images/零件4.jpg" width="664"/></strong>
 <h2><strong>組合圖</strong></h2>
-<p><strong></strong></p>
+<p><strong><img alt="" height="513" src="/images/組合.jpg" width="563"/></strong></p>
 <h2><strong>雲端</strong></h2>
-<p></p>
+<p><a href="https://drive.google.com/drive/folders/1_R6SqPMNQUQSUCQY-x7qUbmjYFTgZzOd?usp=sharing">檔案位置</a></p>
 </div>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div2"></div>
