--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,6 +1,6 @@
 <h1>About</h1>
 <p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite</a></p>
-<p></p>
+<p>1212</p>
 <p><strong></strong></p>
 <h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
@@ -291,9 +291,7 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <h1><strong>作業</strong></h1>
 <h2><strong>零件</strong></h2>
 <p><strong><img alt="" height="544" src="/images/零件1.jpg" width="800"/></strong></p>
-<strong><img alt="" height="389" src="/images/零件2.jpg" width="560"/></strong>
-<strong><img alt="" height="521" src="/images/零件3.jpg" width="515"/></strong>
-<strong><img alt="" height="548" src="/images/零件4.jpg" width="664"/></strong>
+<strong><img alt="" height="389" src="/images/零件2.jpg" width="560"/></strong> <strong><img alt="" height="521" src="/images/零件3.jpg" width="515"/></strong> <strong><img alt="" height="548" src="/images/零件4.jpg" width="664"/></strong>
 <h2><strong>組合圖</strong></h2>
 <p><strong><img alt="" height="513" src="/images/組合.jpg" width="563"/></strong></p>
 <h2><strong>雲端</strong></h2>
