--- a/content/Brython.html
+++ b/content/Brython.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='作業.html'>作業</a><ul class='dropdown'><li><a href='零件.html'>零件</a><li><a href='組合圖.html'>組合圖</a><li><a href='雲端.html'>雲端</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='任務一.html'>任務一</a><ul class='dropdown'><li><a href='零件.html'>零件</a><li><a href='組合圖.html'>組合圖</a><li><a href='雲端.html'>雲端</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='作業.html'>Next</a> >> 作業<br /><h1>Brython</h1>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='任務一.html'>Next</a> >> 任務一<br /><h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
@@ -422,13 +422,12 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><button id="kw_run2">Run</button> <button id="kw_show_console2">Output</button> <button id="kw_clear_console2">清除輸出區</button><button id="clear_bd2">清除繪圖區</button><button onclick="window.location.reload()">Reload</button></p>
 <p><!-- 執行與清除按鈕結束 --></p>
 <p></p>
-<div style="width: 100%; height: 100%;">
 <p></p>
 <p><!-- 程式執行 ouput 區 --></p>
 <div><textarea autocomplete="off" id="kw_console2"></textarea></div>
 <div></div>
 <div></div>
-<br />About << <a href='About.html'>Previous</a> <a href='作業.html'>Next</a> >> 作業</div>
+<br />About << <a href='About.html'>Previous</a> <a href='任務一.html'>Next</a> >> 任務一</div>
         
     <!-- footer -->
       <div class="container">
