--- a/content/index.html
+++ b/content/index.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='作業.html'>作業</a><ul class='dropdown'><li><a href='零件.html'>零件</a><li><a href='組合圖.html'>組合圖</a><li><a href='雲端.html'>雲端</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='任務一.html'>任務一</a><ul class='dropdown'><li><a href='零件.html'>零件</a><li><a href='組合圖.html'>組合圖</a><li><a href='雲端.html'>雲端</a></li>
                       </ul>
                 </nav>
               </div>
