--- a/content/test.html
+++ b/content/test.html
@@ -142,10 +142,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">任務一 << <a href='任務一.html'>Previous</a> <a href='組合圖.html'>Next</a> >> 組合圖<br /><h1>零件</h1>
-<p><strong><img alt="" height="544" src="./../images/零件1.jpg" width="800"/></strong></p>
-<p><strong><img alt="" height="389" src="./../images/零件2.jpg" width="560"/></strong> <strong><img alt="" height="521" src="./../images/零件3.jpg" width="515"/></strong> <strong><img alt="" height="548" src="./../images/零件4.jpg" width="664"/></strong></p>
-<br />任務一 << <a href='任務一.html'>Previous</a> <a href='組合圖.html'>Next</a> >> 組合圖</div>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>test</h1>
+<br />About << <a href='About.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
