--- a/config/content.htm
+++ b/config/content.htm
@@ -1,8 +1,6 @@
 <h1>About</h1>
 <p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite</a></p>
 <p></p>
-<p></p>
-<h2>test</h2>
 <h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
@@ -288,6 +286,10 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <div><textarea autocomplete="off" id="kw_console2"></textarea></div>
 <div></div>
 <div></div>
+<h1><strong>w4~w5</strong></h1>
+<h2>siemens</h2>
+<p>西門子 (Siemens) 是德國有名的機電資軟硬體整合公司, 目前旗下的電腦輔助機械設計套件包括中階套件<span> </span><span>Solid Edge (<a href="https://solidedge.siemens.com/en/solutions/users/hobbyists-and-makers/">community 版 Siemens Solid Edge</a> - <a href="https://nfuedu-my.sharepoint.com/:u:/g/personal/yen_nfu_edu_tw/Ef9XW25wCPtCspWavfXRQkYBKeFkOnZDfMyA3Q-1DRhDNA?e=grfmFo">可攜版下載</a> (無須上網即可開啟, 但因為啟動之前必須執行 Solid Edge 所需之 Registry import, 因此可攜版比較建議在有還原卡或虛擬主機中使用, for @nfu users only), 與高階套件 NX.</span></p>
+<p><span>下載<span> </span><a href="https://nfuedu-my.sharepoint.com/:u:/g/personal/yen_nfu_edu_tw/EdHAOThcQztGj4EZy5Duab0Bvcf3AbzsC_MLsCfmwBXAFg?e=4dPh6O">NX2027.3401_lite_cad2022.7z</a><span> </span>(需要下載密碼, 執行時必須連網至機械設計工程系的認證伺服器才能開啟)</span></p>
 <h1><strong>任務一</strong></h1>
 <h2><strong>零件</strong></h2>
 <p><strong><img alt="" height="544" src="/images/零件1.jpg" width="800"/></strong></p>
