--- a/content/Brython.html
+++ b/content/Brython.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='test.html'>test</a></li></ul><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='任務一.html'>任務一</a><ul class='dropdown'><li><a href='零件.html'>零件</a><li><a href='組合圖.html'>組合圖</a><li><a href='雲端.html'>雲端</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='w4~w5.html'>w4~w5</a><ul class='dropdown'><li><a href='siemens.html'>siemens</a></li></ul><li class='has-children'><a href='任務一.html'>任務一</a><ul class='dropdown'><li><a href='零件.html'>零件</a><li><a href='組合圖.html'>組合圖</a><li><a href='雲端.html'>雲端</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">test << <a href='test.html'>Previous</a> <a href='任務一.html'>Next</a> >> 任務一<br /><h1>Brython</h1>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='w4~w5.html'>Next</a> >> w4~w5<br /><h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
@@ -427,7 +427,7 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <div><textarea autocomplete="off" id="kw_console2"></textarea></div>
 <div></div>
 <div></div>
-<br />test << <a href='test.html'>Previous</a> <a href='任務一.html'>Next</a> >> 任務一</div>
+<br />About << <a href='About.html'>Previous</a> <a href='w4~w5.html'>Next</a> >> w4~w5</div>
         
     <!-- footer -->
       <div class="container">
