--- a/content/組合圖-1.html
+++ b/content/組合圖-1.html
@@ -2,7 +2,7 @@
         <head>
         <title>41123249</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,8 +142,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">siemens << <a href='siemens.html'>Previous</a> <a href='零件-1.html'>Next</a> >> 零件-1<br /><h1>任務一</h1>
-<br />siemens << <a href='siemens.html'>Previous</a> <a href='零件-1.html'>Next</a> >> 零件-1</div>
+    <div id="tipue_search_content">零件-1 << <a href='零件-1.html'>Previous</a> <a href='雲端.html'>Next</a> >> 雲端<br /><h1>組合圖-1</h1>
+<p><strong><img alt="" height="513" src="./../images/組合.jpg" width="563"/></strong></p>
+<br />零件-1 << <a href='零件-1.html'>Previous</a> <a href='雲端.html'>Next</a> >> 雲端</div>
         
     <!-- footer -->
       <div class="container">
