--- a/content/組合圖-2.html
+++ b/content/組合圖-2.html
@@ -2,7 +2,7 @@
         <head>
         <title>41123249</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,8 +142,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">siemens << <a href='siemens.html'>Previous</a> <a href='零件-1.html'>Next</a> >> 零件-1<br /><h1>任務一</h1>
-<br />siemens << <a href='siemens.html'>Previous</a> <a href='零件-1.html'>Next</a> >> 零件-1</div>
+    <div id="tipue_search_content">零件-2 << <a href='零件-2.html'>Previous</a> <br /><h1>組合圖-2</h1>
+<p><img alt="" height="450" src="./../images/未命名1.jpg" width="800"/></p>
+<!-- editor2 結束 --><hr/>
+<p>
+<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
+</p><br />零件-2 << <a href='零件-2.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
