--- a/content/雲端.html
+++ b/content/雲端.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='w4~w5.html'>w4~w5</a><ul class='dropdown'><li><a href='siemens.html'>siemens</a></li></ul><li class='has-children'><a href='任務一.html'>任務一</a><ul class='dropdown'><li><a href='零件.html'>零件</a><li><a href='組合圖.html'>組合圖</a><li><a href='雲端.html'>雲端</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='w4~w5.html'>w4~w5</a><ul class='dropdown'><li><a href='siemens.html'>siemens</a></li></ul><li class='has-children'><a href='任務一.html'>任務一</a><ul class='dropdown'><li><a href='零件-1.html'>零件-1</a><li><a href='組合圖-1.html'>組合圖-1</a><li><a href='雲端.html'>雲端</a></li></ul><li class='has-children'><a href='軌道永動機.html'>軌道永動機</a><ul class='dropdown'><li><a href='零件-2.html'>零件-2</a><li><a href='組合圖-2.html'>組合圖-2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,14 +142,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">組合圖 << <a href='組合圖.html'>Previous</a> <br /><h1>雲端</h1>
+    <div id="tipue_search_content">組合圖-1 << <a href='組合圖-1.html'>Previous</a> <a href='軌道永動機.html'>Next</a> >> 軌道永動機<br /><h1>雲端</h1>
 <p><a href="https://drive.google.com/drive/folders/1_R6SqPMNQUQSUCQY-x7qUbmjYFTgZzOd?usp=sharing">檔案位置</a></p>
-<p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
-<div id="brython_div2"></div>
-<!-- editor2 結束 --><hr/>
-<p>
-<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
-</p><br />組合圖 << <a href='組合圖.html'>Previous</a> </div>
+<p></p>
+<p></p>
+<br />組合圖-1 << <a href='組合圖-1.html'>Previous</a> <a href='軌道永動機.html'>Next</a> >> 軌道永動機</div>
         
     <!-- footer -->
       <div class="container">
