--- a/content/零件-1.html
+++ b/content/零件-1.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='w4~w5.html'>w4~w5</a><ul class='dropdown'><li><a href='siemens.html'>siemens</a></li></ul><li class='has-children'><a href='任務一.html'>任務一</a><ul class='dropdown'><li><a href='零件.html'>零件</a><li><a href='組合圖.html'>組合圖</a><li><a href='雲端.html'>雲端</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='w4~w5.html'>w4~w5</a><ul class='dropdown'><li><a href='siemens.html'>siemens</a></li></ul><li class='has-children'><a href='任務一.html'>任務一</a><ul class='dropdown'><li><a href='零件-1.html'>零件-1</a><li><a href='組合圖-1.html'>組合圖-1</a><li><a href='雲端.html'>雲端</a></li></ul><li class='has-children'><a href='軌道永動機.html'>軌道永動機</a><ul class='dropdown'><li><a href='零件-2.html'>零件-2</a><li><a href='組合圖-2.html'>組合圖-2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,10 +142,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">任務一 << <a href='任務一.html'>Previous</a> <a href='組合圖.html'>Next</a> >> 組合圖<br /><h1>零件</h1>
+    <div id="tipue_search_content">任務一 << <a href='任務一.html'>Previous</a> <a href='組合圖-1.html'>Next</a> >> 組合圖-1<br /><h1>零件-1</h1>
 <p><strong><img alt="" height="544" src="./../images/零件1.jpg" width="800"/></strong></p>
 <p><strong><img alt="" height="389" src="./../images/零件2.jpg" width="560"/></strong> <strong><img alt="" height="521" src="./../images/零件3.jpg" width="515"/></strong> <strong><img alt="" height="548" src="./../images/零件4.jpg" width="664"/></strong></p>
-<br />任務一 << <a href='任務一.html'>Previous</a> <a href='組合圖.html'>Next</a> >> 組合圖</div>
+<br />任務一 << <a href='任務一.html'>Previous</a> <a href='組合圖-1.html'>Next</a> >> 組合圖-1</div>
         
     <!-- footer -->
       <div class="container">
