--- a/content/零件-2.html
+++ b/content/零件-2.html
@@ -2,7 +2,7 @@
         <head>
         <title>41123249</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,8 +142,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">siemens << <a href='siemens.html'>Previous</a> <a href='零件-1.html'>Next</a> >> 零件-1<br /><h1>任務一</h1>
-<br />siemens << <a href='siemens.html'>Previous</a> <a href='零件-1.html'>Next</a> >> 零件-1</div>
+    <div id="tipue_search_content">軌道永動機 << <a href='軌道永動機.html'>Previous</a> <a href='組合圖-2.html'>Next</a> >> 組合圖-2<br /><h1>零件-2</h1>
+<p><img alt="" height="450" src="./../images/未命名.jpg" width="800"/></p>
+<p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
+<div id="brython_div2"><img alt="" height="430" src="./../images/123.jpg" width="800"/></div>
+<br />軌道永動機 << <a href='軌道永動機.html'>Previous</a> <a href='組合圖-2.html'>Next</a> >> 組合圖-2</div>
         
     <!-- footer -->
       <div class="container">
