--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -305,6 +305,8 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><img alt="" height="450" src="/images/未命名.jpg" width="800"/></p>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div2"><img alt="" height="430" src="/images/123.jpg" width="800"/></div>
+<h2>組合圖</h2>
+<p><img alt="" height="450" src="/images/未命名1.jpg" width="800"/></p>
 <!-- editor2 結束 --><hr/>
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
