--- a/content/組合圖-2.html
+++ b/content/組合圖-2.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='w4~w5.html'>w4~w5</a><ul class='dropdown'><li><a href='siemens.html'>siemens</a></li></ul><li class='has-children'><a href='任務一.html'>任務一</a><ul class='dropdown'><li><a href='零件-1.html'>零件-1</a><li><a href='組合圖-1.html'>組合圖-1</a><li><a href='雲端.html'>雲端</a></li></ul><li class='has-children'><a href='軌道永動機.html'>軌道永動機</a><ul class='dropdown'><li><a href='零件-2.html'>零件-2</a><li><a href='組合圖-2.html'>組合圖-2</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='w4~w5.html'>w4~w5</a><ul class='dropdown'><li><a href='siemens.html'>siemens</a></li></ul><li class='has-children'><a href='任務一.html'>任務一</a><ul class='dropdown'><li><a href='零件-1.html'>零件-1</a><li><a href='組合圖-1.html'>組合圖-1</a><li><a href='雲端.html'>雲端</a></li></ul><li class='has-children'><a href='軌道永動機.html'>軌道永動機</a><ul class='dropdown'><li><a href='零件-2.html'>零件-2</a><li><a href='組合圖-2.html'>組合圖-2</a></li></ul><li><a href='網站評分.html'>網站評分</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,12 +142,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">零件-2 << <a href='零件-2.html'>Previous</a> <br /><h1>組合圖-2</h1>
+    <div id="tipue_search_content">零件-2 << <a href='零件-2.html'>Previous</a> <a href='網站評分.html'>Next</a> >> 網站評分<br /><h1>組合圖-2</h1>
 <p><img alt="" height="450" src="./../images/未命名1.jpg" width="800"/></p>
-<!-- editor2 結束 --><hr/>
-<p>
-<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
-</p><br />零件-2 << <a href='零件-2.html'>Previous</a> </div>
+<br />零件-2 << <a href='零件-2.html'>Previous</a> <a href='網站評分.html'>Next</a> >> 網站評分</div>
         
     <!-- footer -->
       <div class="container">
