--- a/content/網站評分.html
+++ b/content/網站評分.html
@@ -143,6 +143,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">組合圖-2 << <a href='組合圖-2.html'>Previous</a> <br /><h1>網站評分</h1>
+<p>自我評分:60</p>
 <p><span>A: 是否按照進度明確標示倉儲的改版歷程? 是</span></p>
 <p><span>B: 是否根據<span> </span><span>IPv4 與 IPv6</span><span> </span>網路環境設定進行作法討論? 是</span></p>
 <p><span>C: 是否就<span><span> </span>Replit、s.cycu.org 與 localhost</span><span> </span>情境下對個人與分組倉儲進行設定操作?  是</span></p>
@@ -155,6 +156,7 @@ img.add_border {
 <p><span>J: 是否使用所分配的 CAD 套件完成<span>專案二 1D 平台零組件繪圖</span>, 並提供零組件下載? 是</span></p>
 <p><span>K: 是否利用<span> </span><span>ZMQ Remote API Python</span><span> </span>對專案二轉入的零組件設定感測器, 並進行鋼球永動模擬? 否</span></p>
 <p><span>L: 是否針對專案二的 1D 平台鋼球平衡系統所需的<span> </span><span>PID 控制理論</span>進行資料收集與 ChatGPT 對答? 否</span></p>
+<p>有觀看影片跟著學,但有些東西還是不太會</p>
 <p><span></span></p>
 <!-- editor2 結束 --><hr/>
 <p>
