--- a/config/content.htm
+++ b/config/content.htm
@@ -286,17 +286,17 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <div><textarea autocomplete="off" id="kw_console2"></textarea></div>
 <div></div>
 <div></div>
-<h1><strong>w4~w5</strong></h1>
+<h1>w4~w5</h1>
 <h2>siemens</h2>
 <p>西門子 (Siemens) 是德國有名的機電資軟硬體整合公司, 目前旗下的電腦輔助機械設計套件包括中階套件<span> </span><span>Solid Edge (<a href="https://solidedge.siemens.com/en/solutions/users/hobbyists-and-makers/">community 版 Siemens Solid Edge</a> - <a href="https://nfuedu-my.sharepoint.com/:u:/g/personal/yen_nfu_edu_tw/Ef9XW25wCPtCspWavfXRQkYBKeFkOnZDfMyA3Q-1DRhDNA?e=grfmFo">可攜版下載</a> (無須上網即可開啟, 但因為啟動之前必須執行 Solid Edge 所需之 Registry import, 因此可攜版比較建議在有還原卡或虛擬主機中使用, for @nfu users only), 與高階套件 NX.</span></p>
 <p><span>下載<span> </span><a href="https://nfuedu-my.sharepoint.com/:u:/g/personal/yen_nfu_edu_tw/EdHAOThcQztGj4EZy5Duab0Bvcf3AbzsC_MLsCfmwBXAFg?e=4dPh6O">NX2027.3401_lite_cad2022.7z</a><span> </span>(需要下載密碼, 執行時必須連網至機械設計工程系的認證伺服器才能開啟)</span></p>
-<h1><strong>任務一</strong></h1>
-<h2><strong>零件</strong></h2>
+<h1>任務一</h1>
+<h2>零件</h2>
 <p><strong><img alt="" height="544" src="/images/零件1.jpg" width="800"/></strong></p>
 <p><strong><img alt="" height="389" src="/images/零件2.jpg" width="560"/></strong> <strong><img alt="" height="521" src="/images/零件3.jpg" width="515"/></strong> <strong><img alt="" height="548" src="/images/零件4.jpg" width="664"/></strong></p>
-<h2><strong>組合圖</strong></h2>
+<h2>組合圖</h2>
 <p><strong><img alt="" height="513" src="/images/組合.jpg" width="563"/></strong></p>
-<h2><strong>雲端</strong></h2>
+<h2>雲端</h2>
 <p><a href="https://drive.google.com/drive/folders/1_R6SqPMNQUQSUCQY-x7qUbmjYFTgZzOd?usp=sharing">檔案位置</a></p>
 <p></p>
 <p></p>
@@ -307,7 +307,8 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <div id="brython_div2"><img alt="" height="430" src="/images/123.jpg" width="800"/></div>
 <h2>組合圖</h2>
 <p><img alt="" height="450" src="/images/未命名1.jpg" width="800"/></p>
-<h1><span>網站評分</span></h1>
+<h1>網站評分</h1>
+<p>自我評分:60</p>
 <p><span>A: 是否按照進度明確標示倉儲的改版歷程? 是</span></p>
 <p><span>B: 是否根據<span> </span><span>IPv4 與 IPv6</span><span> </span>網路環境設定進行作法討論? 是</span></p>
 <p><span>C: 是否就<span><span> </span>Replit、s.cycu.org 與 localhost</span><span> </span>情境下對個人與分組倉儲進行設定操作?  是</span></p>
@@ -320,6 +321,7 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><span>J: 是否使用所分配的 CAD 套件完成<span>專案二 1D 平台零組件繪圖</span>, 並提供零組件下載? 是</span></p>
 <p><span>K: 是否利用<span> </span><span>ZMQ Remote API Python</span><span> </span>對專案二轉入的零組件設定感測器, 並進行鋼球永動模擬? 否</span></p>
 <p><span>L: 是否針對專案二的 1D 平台鋼球平衡系統所需的<span> </span><span>PID 控制理論</span>進行資料收集與 ChatGPT 對答? 否</span></p>
+<p>有觀看影片跟著學,但有些東西還是不太會</p>
 <p><span></span></p>
 <!-- editor2 結束 --><hr/>
 <p>
