--- a/content/網站評分.html
+++ b/content/網站評分.html
@@ -156,7 +156,7 @@ img.add_border {
 <p><span>J: 是否使用所分配的 CAD 套件完成<span>專案二 1D 平台零組件繪圖</span>, 並提供零組件下載? 是</span></p>
 <p><span>K: 是否利用<span> </span><span>ZMQ Remote API Python</span><span> </span>對專案二轉入的零組件設定感測器, 並進行鋼球永動模擬? 否</span></p>
 <p><span>L: 是否針對專案二的 1D 平台鋼球平衡系統所需的<span> </span><span>PID 控制理論</span>進行資料收集與 ChatGPT 對答? 否</span></p>
-<p>有觀看影片跟著學,但有些東西還是不太會</p>
+<p>有觀看影片跟著學,但有些東西還是不太會,以及球的推力</p>
 <p><span></span></p>
 <!-- editor2 結束 --><hr/>
 <p>
