永動機零件檔案上傳

--- a/config/content.htm
+++ b/config/content.htm
@@ -302,7 +302,14 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p></p>
 <h1>軌道永動機</h1>
 <h2>零件</h2>
+<p><a href="https://drive.google.com/file/d/1FUQeTC2DuVnZwuvQx3vzsW6BTxSGoomG/view?usp=sharing">底座</a></p>
+<p></p>
 <p><img alt="" height="450" src="/images/未命名.jpg" width="800"/></p>
+<p></p>
+<p></p>
+<p><a href="https://drive.google.com/file/d/1AKHMv999MwFG56JkMnTpdxmiWcyOOl-A/view?usp=sharing">軌道</a></p>
+<p></p>
+<p></p>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div2"><img alt="" height="430" src="/images/123.jpg" width="800"/></div>
 <h2>組合圖</h2>
