--- a/content/零件-2.html
+++ b/content/零件-2.html
@@ -143,7 +143,14 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">軌道永動機 << <a href='軌道永動機.html'>Previous</a> <a href='組合圖-2.html'>Next</a> >> 組合圖-2<br /><h1>零件-2</h1>
+<p><a href="https://drive.google.com/file/d/1FUQeTC2DuVnZwuvQx3vzsW6BTxSGoomG/view?usp=sharing">底座</a></p>
+<p></p>
 <p><img alt="" height="450" src="./../images/未命名.jpg" width="800"/></p>
+<p></p>
+<p></p>
+<p><a href="https://drive.google.com/file/d/1AKHMv999MwFG56JkMnTpdxmiWcyOOl-A/view?usp=sharing">軌道</a></p>
+<p></p>
+<p></p>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div2"><img alt="" height="430" src="./../images/123.jpg" width="800"/></div>
 <br />軌道永動機 << <a href='軌道永動機.html'>Previous</a> <a href='組合圖-2.html'>Next</a> >> 組合圖-2</div>
